# CmakeProject

./: CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt  main.cc
src/my_lib/: CMakeLists.txt  my_lib.cc
